# cmake

./: CMakeLists.txt  README.txt  main.cpp
ModuleA/: CMakeLists.txt  ModuleA.cpp
ModuleA/include/ModuleA/: ModuleA.hpp
ModuleB/: CMakeLists.txt  ModuleB.cpp
